educational,personal and commucational details added

--- a/student_detail.html
+++ b/student_detail.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Student Detail Panel </title>
-    <link rel="stylesheet" type="text/css" href="stu_detail.css" />
+    <link rel="stylesheet" type="text/css" href="css/stu_detail.css" />
 
 <!-- CSS only -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -39,9 +39,10 @@
             <label for="no">Phone Number:</label>
             <input id="no" type="text" placeholder="Enter Phone Number" required />
         </div>
+
         <div class="form-box">
-            <label for="add">Full Address:</label>
-            <input id="add" type="text" placeholder="Enter Your Full Address Here" required />
+            <label for="add">Adhar Numer:</label>
+            <input id="add" type="text" placeholder="Enter Adhar Number Here" required />
         </div>
         <div class="form-box">
             <label for="father">Father's Full Name:</label>
