--- a/forget_pass.html
+++ b/forget_pass.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Forget Password </title>
-    <link rel="stylesheet" type="text/css" href="forget_pass_style.css" />
+    <link rel="stylesheet" type="text/css" href="css/forget_pass_style.css" />
 
 </head>	
 <body>
