--- a/mainpage.html
+++ b/mainpage.html
@@ -6,7 +6,7 @@
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-     <link href="sb-admin.css" rel="stylesheet">
+     <link href="css/sb-admin.css" rel="stylesheet">
 
 </head>
 <body id="page-top">
