--- a/employe_login.html
+++ b/employe_login.html
@@ -20,7 +20,7 @@
 		<div class="col-sm-9 main-section">
 			<div class="modal-content">
 				<div class="col-12 user-img">
-					<img src="face1.png">
+					<img src="media/face1.png">
 				</div>
 				<div class="col-12 form-input">
 					<form>
