fixed the positioning and added mid-term report

--- a/communicational.html
+++ b/communicational.html
@@ -30,20 +30,32 @@
             <label for="add">Permanent Full Address:</label>
             <input id="add" type="text" placeholder="Enter Your Permanent Address Here" required />
         </div>
+        <hr>
         <div class="form-box">
             <label for="add">Local Guardian Name</label>
             <input id="add" type="text" placeholder="Enter Name" required />
+        </div>
+        <div class="form-box">
 
             <label for="add">Local Guardian Contact Number</label>
             <input id="add" type="text" placeholder="Enter Phone Number" required />
+        </div>
+        <div class="form-box">
 
             <label for="add">Relation With Local Guardian </label>
             <input id="add" type="text" placeholder="Enter Relation" required />
         </div>
 
-        <div class="form-submit">
+       
+        <hr>
+        <div class="form-box">
+            <label for="add">Emergency Contact Person Number </label>
+            <input id="add" type="text" placeholder="Enter Number" required />
+        </div>
+         <div class="form-submit" class="form-box">
             <input type="submit" class="btn btn-success" value="Submit Details" />
         </div>
+        
     </form>
 </div>
 
