--- a/employe_login.html
+++ b/employe_login.html
@@ -26,6 +26,10 @@
 					<form>
 						<div class="form-group">
 							<i class="fas fa-lock"></i>
+							<input type="text" class="form-control" placeholder="Username" required/>
+						</div>
+						<div class="form-group">
+							<i class="fas fa-lock"></i>
 							<input type="email" class="form-control" placeholder="Enter Email" required/>
 						</div>
 						<div class="form-group">
