--- a/Navbar.html
+++ b/Navbar.html
@@ -5,6 +5,15 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="css/navbar.css">
+	<style type="text/css">
+		.flex-column{
+			width: 250px;
+
+		}
+		.nav-link{
+			padding: 18px;
+		}
+	</style>
 </head>
 <body>
 	<nav class="navbar navbar-dark bg-dark">
@@ -25,7 +34,11 @@
     </div>
   </div>
 </nav>
-
+<nav class="nav flex-column  navbar-dark bg-dark">
+  <a class="nav-link" href="student_detail.html">Student Detail</a>
+  <a class="nav-link" href="educational_details.html">Educational Details</a>
+  <a class="nav-link" href="commucational.html">Commucational Details</a>
+</nav>
 
 
 
