--- a/Navbar.html
+++ b/Navbar.html
@@ -35,9 +35,14 @@
   </div>
 </nav>
 <nav class="nav flex-column  navbar-dark bg-dark">
+  <a class="nav-link" href="#">Dashboard</a>
+  <a class="nav-link" href="#">Faculty</a>
   <a class="nav-link" href="student_detail.html">Student Detail</a>
   <a class="nav-link" href="educational_details.html">Educational Details</a>
   <a class="nav-link" href="commucational.html">Commucational Details</a>
+  <a class="nav-link" href="#">Hostel Rules</a>
+  <a class="nav-link" href="#">Contact</a>
+  <a class="nav-link" href="#">Attendance</a>
 </nav>
 
 
